force-app/main/default/objects/Account/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>AccountNumber</label>
    <type>AutoNumber</type>
</CustomField>