force-app/main/default/objects/Account/fields/ACH_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ACH_Account_Type__c</fullName>
    <label>ACH Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>