force-app/main/default/objects/Account/fields/ACH_Account_Verified__c.field-meta.xml
<CustomField>
    <fullName>ACH_Account_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH Account Verified</label>
    <type>Checkbox</type>
</CustomField>