force-app/main/default/objects/Account/fields/ACH_Reason__c.field-meta.xml
<CustomField>
    <fullName>ACH_Reason__c</fullName>
    <label>ACH Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>