force-app/main/default/objects/Account/fields/ACH_Status__c.field-meta.xml
<CustomField>
    <fullName>ACH_Status__c</fullName>
    <label>ACH Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>