force-app/main/default/objects/Account/fields/Customer_key__c.field-meta.xml
<CustomField>
    <fullName>Customer_key__c</fullName>
    <label>Customer key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>