force-app/main/default/objects/Account/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>Identification Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Identification Number</inlineHelpText>
    <label>ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>