force-app/main/default/objects/Account/fields/Relationship_with_contact__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_contact__c</fullName>
    <label>Relationship with contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>