force-app/main/default/objects/Account/fields/Relationship_With_Student__c.field-meta.xml
<CustomField>
    <fullName>Relationship_With_Student__c</fullName>
    <label>Relationship With Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>