force-app/main/default/objects/Account/fields/Stripe_Customer_key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_key__c</fullName>
    <label>Stripe Customer key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>