force-app/main/default/objects/Account/fields/Stripe_Token__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Token__c</fullName>
    <label>Stripe Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>