force-app/main/default/objects/Account/fields/Teacher_User__c.field-meta.xml
<CustomField>
    <fullName>Teacher_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Teachers</relationshipName>
    <type>Lookup</type>
</CustomField>