force-app/main/default/objects/Account/fields/Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Number__c</fullName>
    <formula>IF(RecordType.Name = &apos;Customer&apos;,&apos;CU-&apos;,IF(RecordType.Name = &apos;Teacher&apos;,&apos;TE-&apos;,&apos;&apos;)
)+ AccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Number</label>
    <type>Text</type>
</CustomField>