force-app/main/default/objects/Account/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <description>Select this option to create a new business account (eg. Agent, University, School etc.)</description>
    <label>Business Account</label>
</RecordType>