force-app/main/default/objects/Account/recordTypes/Family.recordType-meta.xml
<RecordType>
    <fullName>Family</fullName>
    <active>false</active>
    <label>Family</label>
</RecordType>