force-app/main/default/objects/Account/recordTypes/Family_Account.recordType-meta.xml
<RecordType>
    <fullName>Family_Account</fullName>
    <active>false</active>
    <description>Select this option to create a new family</description>
    <label>Family Account</label>
</RecordType>