force-app/main/default/objects/Account/recordTypes/Location.recordType-meta.xml
<RecordType>
    <fullName>Location</fullName>
    <active>true</active>
    <description>Select this option to create a new school location or center</description>
    <label>Location</label>
</RecordType>