force-app/main/default/objects/Account/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Select this option to create a new account for other purposes (eg. Referrer, Individual Agent etc)</description>
    <label>Other</label>
</RecordType>