force-app/main/default/objects/Account/validationRules/BirthdateNotInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>BirthdateNotInFuture</fullName>
    <active>true</active>
    <errorConditionFormula>PersonBirthdate &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>PersonBirthdate</errorDisplayField>
    <errorMessage>Birthday can not be of future date.</errorMessage>
</ValidationRule>